# cafe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: db.sqlite3
app/cafes/: apps.py  models.py  serializers.py  viewsets.py
app/cafes/migrations/: 0001_initial.py  0002_initial.py  0003_alter_cafecomplexity_cafe.py  0004_alter_cafeflag_cafe_alter_cafelike_cafe.py
app/config/: urls.py
app/config/settings/: __init__.py  base.py  dev.py  prod.py
app/core/: authentications.py  exceptions.py
app/users/: models.py  serializers.py  viewsets.py
app/users/migrations/: 0001_initial.py  0002_alter_user_email.py
