[tool.poetry]
name = "django_initial_settings"
version = "0.1.0"
description = ""
authors = ["hhhroot <hhhroot@safuventures.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "*"
django-environ = "*"
Django = "*"
djangorestframework = "*"
gunicorn = "*"
Pillow = "*"
django-extensions = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
ipython = "*"
ipdb = "*"
django-debug-toolbar = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
